--- a/package.json
+++ b/package.json
@@ -9,9 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.14.2",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "^5.66.9",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.16",
+    "@types/nprogress": "^0.2.3",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.7",
+    "hls.js": "^1.5.20",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.476.0",
+    "next": "15.1.7",
+    "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.7.15",
+    "nprogress": "^0.2.0",
+    "prettier": "^3.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-hls-player": "^3.0.7",
+    "react-hook-form": "^7.55.0",
+    "react-intersection-observer": "^9.15.1",
+    "react-player": "^2.16.0",
+    "react-select": "^5.10.0",
+    "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.0",
+    "swiper": "^11.2.4",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "use-media": "^1.5.0"
   },
   "devDependencies": {
     "typescript": "^5",
